--- a/index.html
+++ b/index.html
@@ -12,87 +12,103 @@
 
 <body>
     <div id="wrapper">
-        <div id="header">
-            <a href="" class="logo">
-                <img src="picture/logohcmute.png" alt="" width="110px">
-            </a>
-            <div id="menu">
-                <div class="item">
-                    <a href="">Trang chủ</a>
-                </div>
-                <div class="item">
-                    <a href="" class="click" onclick="scrollToExercise(event)">Bài tập</a>
-                </div>
-                <div class="item">
-                    <a href="">Blog</a>
-                </div>
-                <div class="item">
-                    <a href="" onclick="scrollToContact(event)">Liên hệ</a>
-                </div>
-            </div>
-            <div id="actions">
-                
-                <div class="item" onclick="toggleForm()">
-                    <h3 class="infor">Thông tin cá nhân</h3>
-                    <img src="picture/ava.png" alt="chưa có">
-                </div>
-                <div class="overlay" id="overlay" onclick="toggleForm()"></div>
-                <div class="form-popup" id="formPopup">
-                    <span class="close-btn" onclick="toggleForm()">&times;</span>
-                    <h3>Thông tin sinh viên</h3>
-                    <form>
-                        <img src="picture/avatar.jpg" alt="alt" class="avata" width="60px"><br>
-                        <label for="name">Châu Văn Thân</label><br>
-                        <label>22110425</label><br>
-                        <label>thanchau.100100@gmail.com</label>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <div id="banner">
-            <div class="box-right">
-                <img src="picture/anh1.jpg" alt="" width="200px">
-                <img src="picture/anh2.jpg" alt="" width="200px">
-                <img src="picture/anh3.jpg" alt="" width="200px">
-            </div>
-            <div class="to-bottom">
-                <a href="">
-                    <img src="picture/bottom.png" alt="">
+        <div id="background">
+            <div id="header">
+                <a href="" class="logo">
+                    <img src="picture/logohcmute.png" alt="" width="110px">
                 </a>
+                <div id="menu">
+                    <div class="item">
+                        <a href="">Trang chủ</a>
+                    </div>
+                    <div class="item">
+                        <a href="" class="click" onclick="scrollToExercise(event)">Bài tập</a>
+                    </div>
+                    <div class="item">
+                        <a href="">Blog</a>
+                    </div>
+                    <div class="item">
+                        <a href="" onclick="scrollToContact(event)">Liên hệ</a>
+                    </div>
+                </div>
+                <div id="menu1">
+                    <a href="" class="icon">
+                        <img src="picture/insta.png" alt="" width="30px">
+                    </a>
+                    <a href="https://www.facebook.com/profile.php?id=100037971012950" class="icon">
+                        <img src="picture/face.png" alt="" width="30px">
+                    </a>
+                    <a href="" class="icon">
+                        <img src="picture/yt.png" alt="" width="30px">
+                    </a>
+                    <a href="https://www.tiktok.com/@useraiwu1zif1o" class="icon">
+                        <img src="picture/tiktok.png" alt="" width="30px">
+                    </a>
+                </div>
+                <div id="actions">
+                    
+                    <div class="item" onclick="toggleForm()">
+                        <h3 class="infor">Thông tin cá nhân</h3>
+                        <img src="picture/ava.png" alt="chưa có">
+                    </div>
+                    <div class="overlay" id="overlay" onclick="toggleForm()"></div>
+                    <div class="form-popup" id="formPopup">
+                        <span class="close-btn" onclick="toggleForm()">&times;</span>
+                        <h3>Thông tin sinh viên</h3>
+                        <form>
+                            <img src="picture/avatar.jpg" alt="alt" class="avata" width="60px"><br>
+                            <label for="name">Châu Văn Thân</label><br>
+                            <label>22110425</label><br>
+                            <label>thanchau.100100@gmail.com</label>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div id="banner">
+                <div class="box-right">
+                    <img src="picture/anh8.jpg" alt="" width="200px">
+                    <img src="picture/anh2.jpg" alt="" width="150px">
+                    <img src="picture/anh3.jpg" alt="" width="200px">
+                </div>
+                <div class="to-bottom">
+                    <a href="">
+                        <img src="picture/bottom.png" alt="" onclick="scrollToBottom(event)">
+                    </a>
+                </div>
             </div>
         </div>
         <div id="wp-products">
             <h2 id="exercise">BÀI TẬP</h2>
             <ul id="list-products">
                 <div class="item">
-                    <img src="picture/logohcmute.png" alt="" width="180px">
+                    <img src="picture/fit.png" alt="" width="300px">
                     <div class="name">Bài tập 1</div>
-                    <a class="survey" href="https://demo1-1-ukx0.onrender.com/Baitapchuong4/">Survey</a>
+                    <a class="survey" href="https://demo1-1-ukx0.onrender.com/Baitapchuong4/">Bài tập chương 4 Survey</a>
                 </div>
                 <div class="item">
                     <img src="picture/logohcmute.png" alt="" width="180px">
                     <div class="name">Bài tập 2</div>
-                    <a class="survey" href="https://demo-1-lvqn.onrender.com/Bai1/">Survey</a>
+                    <a class="survey" href="https://demo-1-lvqn.onrender.com/Bai1/">Bài tập chương 5 Email</a>
                 </div>
                 <div class="item">
                     <img src="picture/logohcmute.png" alt="" width="180px">
                     <div class="name">Bài tập 3</div>
-                    <a class="survey" href="">Survey</a>
+                    <a class="survey" href=""></a>
                 </div>
                 <div class="item">
                     <img src="picture/logohcmute.png" alt="" width="180px">
                     <div class="name">Bài tập 4</div>
-                    <a class="survey" href="">Survey</a>
+                    <a class="survey" href=""></a>
                 </div>
                 <div class="item">
                     <img src="picture/logohcmute.png" alt="" width="180px">
                     <div class="name">Bài tập 5</div>
-                    <a class="survey" href="">Survey</a>
+                    <a class="survey" href=""></a>
                 </div>
                 <div class="item">
                     <img src="picture/logohcmute.png" alt="" width="180px">
                     <div class="name">Bài tập 6</div>
-                    <a class="survey" href="">Survey</a>
+                    <a class="survey" href=""></a>
                 </div>
             </ul>
             <div class="list-page">
@@ -122,7 +138,7 @@
                 </div>
             </div>
             <div class="box">
-                <h3>NỘI DUNG</h3>
+                <h3 id="content">NỘI DUNG</h3>
                 <ul class="quick-menu">
                     <div class="item">
                         <a href="">Trang chủ</a>
