--- a/index.html
+++ b/index.html
@@ -86,27 +86,27 @@
                     <a class="survey" href="https://demo1-1-ukx0.onrender.com/Baitapchuong4/">Bài tập chương 4 Survey</a>
                 </div>
                 <div class="item">
-                    <img src="picture/logohcmute.png" alt="" width="180px">
+                    <img src="picture/fit.png" alt="" width="300px">
                     <div class="name">Bài tập 2</div>
                     <a class="survey" href="https://demo-1-lvqn.onrender.com/Bai1/">Bài tập chương 5 Email</a>
                 </div>
                 <div class="item">
-                    <img src="picture/logohcmute.png" alt="" width="180px">
+                    <img src="picture/fit.png" alt="" width="300px">
                     <div class="name">Bài tập 3</div>
                     <a class="survey" href=""></a>
                 </div>
                 <div class="item">
-                    <img src="picture/logohcmute.png" alt="" width="180px">
+                    <img src="picture/fit.png" alt="" width="300px">
                     <div class="name">Bài tập 4</div>
                     <a class="survey" href=""></a>
                 </div>
                 <div class="item">
-                    <img src="picture/logohcmute.png" alt="" width="180px">
+                    <img src="picture/fit.png" alt="" width="300px">
                     <div class="name">Bài tập 5</div>
                     <a class="survey" href=""></a>
                 </div>
                 <div class="item">
-                    <img src="picture/logohcmute.png" alt="" width="180px">
+                    <img src="picture/fit.png" alt="" width="300px">
                     <div class="name">Bài tập 6</div>
                     <a class="survey" href=""></a>
                 </div>
