--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Profile</title>
+    <link rel="icon" href="picture/fit.png" type="image/x-icon">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,7 +50,7 @@
                     
                     <div class="item" onclick="toggleForm()">
                         <h3 class="infor">Thông tin cá nhân</h3>
-                        <img src="picture/ava.png" alt="chưa có">
+                        <img src="picture/ava1.png" alt="chưa có" width="35px" height="35px">
                     </div>
                     <div class="overlay" id="overlay" onclick="toggleForm()"></div>
                     <div class="form-popup" id="formPopup">
