--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     
                     <div class="item" onclick="toggleForm()">
                         <h3 class="infor">Thông tin cá nhân</h3>
-                        <img src="picture/ava1.png" alt="chưa có" width="35px" height="35px">
+                        <img src="picture/ava1.png" alt="chưa có" width="35px" height="35gipx">
                     </div>
                     <div class="overlay" id="overlay" onclick="toggleForm()"></div>
                     <div class="form-popup" id="formPopup">
@@ -94,7 +94,7 @@
                 <div class="item">
                     <img src="picture/fit.png" alt="" width="300px">
                     <div class="name">Bài tập 3</div>
-                    <a class="survey" href=""></a>
+                    <a class="survey" href="https://laptrinhweb-1.onrender.com/Ltw_6.1">Chương 6 bài 1</a>
                 </div>
                 <div class="item">
                     <img src="picture/fit.png" alt="" width="300px">
