--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="item">
                     <img src="picture/fit.png" alt="" width="300px">
                     <div class="name">Bài tập 4</div>
-                    <a class="survey" href=""></a>
+                    <a class="survey" href="https://laptrinhweb-1.onrender.com/Shop">Chương 7 tạo giỏ hàng</a>
                 </div>
                 <div class="item">
                     <img src="picture/fit.png" alt="" width="300px">
