--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="item">
                     <img src="picture/fit.png" alt="" width="300px">
                     <div class="name">Bài tập 5</div>
-                    <a class="survey" href=""></a>
+                    <a class="survey" href="https://baitapjbdc.onrender.com/baitapJBDC/">Bài tập về JBDC</a>
                 </div>
                 <div class="item">
                     <img src="picture/fit.png" alt="" width="300px">
