--- a/index.html
+++ b/index.html
@@ -104,12 +104,22 @@
                 <div class="item">
                     <img src="picture/fit.png" alt="" width="300px">
                     <div class="name">Bài tập 5</div>
-                    <a class="survey" href="https://baitapjbdc.onrender.com/baitapJBDC/">Bài tập về JBDC</a>
+                    <a class="survey" href="https://baitapjbdc.onrender.com/baitapJBDC/">Bài tập JBDC</a>
                 </div>
                 <div class="item">
                     <img src="picture/fit.png" alt="" width="300px">
                     <div class="name">Bài tập 6</div>
-                    <a class="survey" href=""></a>
+                    <a class="survey" href="https://baitapltweb.onrender.com/Ltw8/">Bài tập Connection Pool</a>
+                </div>
+                <div class="item">
+                    <img src="picture/fit.png" alt="" width="300px">
+                    <div class="name">Bài tập 7</div>
+                    <a class="survey" href="https://mylyw9.onrender.com/ltw9">Bài tập JPA</a>
+                </div>
+                <div class="item">
+                    <img src="picture/fit.png" alt="" width="300px">
+                    <div class="name">Bài tập 8</div>
+                    <a class="survey" href="https://baitapltweb.onrender.com/EmailSend/">Java Mail Project</a>
                 </div>
             </ul>
             <div class="list-page">
